[gd_scene load_steps=3 format=2]

[ext_resource path="res://layout/train/layout_train_inspector.gd" type="Script" id=1]
[ext_resource path="res://tools/selector.gd" type="Script" id=2]

[node name="VBoxContainer" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 129.0
margin_bottom = 14.0
text = "LayoutTrain"

[node name="FixedFacingCheckbox" type="CheckBox" parent="."]
margin_top = 18.0
margin_right = 129.0
margin_bottom = 42.0
text = "Fixed facing"

[node name="SensorAdvanceCheckbox" type="CheckBox" parent="."]
margin_top = 46.0
margin_right = 129.0
margin_bottom = 70.0
text = "manual sensors"

[node name="BLETrainContainer" type="VBoxContainer" parent="."]
margin_top = 74.0
margin_right = 129.0
margin_bottom = 112.0

[node name="Label" type="Label" parent="BLETrainContainer"]
margin_right = 129.0
margin_bottom = 14.0
text = "BLE Train"

[node name="BLETrainSelector" type="OptionButton" parent="BLETrainContainer"]
margin_top = 18.0
margin_right = 129.0
margin_bottom = 38.0
script = ExtResource( 2 )

[node name="ColorContainer" type="VBoxContainer" parent="."]
margin_top = 116.0
margin_right = 129.0
margin_bottom = 154.0

[node name="Label" type="Label" parent="ColorContainer"]
margin_right = 129.0
margin_bottom = 14.0
text = "Color"

[node name="ColorButton" type="ColorPickerButton" parent="ColorContainer"]
margin_top = 18.0
margin_right = 129.0
margin_bottom = 38.0

[connection signal="toggled" from="FixedFacingCheckbox" to="." method="_on_FixedFacingCheckbox_toggled"]
[connection signal="toggled" from="SensorAdvanceCheckbox" to="." method="_on_SensorAdvanceCheckbox_toggled"]
[connection signal="meta_selected" from="BLETrainContainer/BLETrainSelector" to="." method="_on_BLETrainSelector_meta_selected"]
[connection signal="color_changed" from="ColorContainer/ColorButton" to="." method="_on_ColorButton_color_changed"]
