[gd_scene load_steps=2 format=2]

[ext_resource path="res://layout_train_inspector.gd" type="Script" id=1]

[node name="VBoxContainer" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 89.0
margin_bottom = 14.0
text = "LayoutTrain"

[node name="FlipHeading" type="Button" parent="."]
margin_top = 18.0
margin_right = 89.0
margin_bottom = 38.0
text = "Flip heading"

[connection signal="pressed" from="FlipHeading" to="." method="_on_FlipHeading_pressed"]
